# mlx-batch-generator-mcp

./: .gitignore  MCP_SETUP.md  README.md  database.py  demo.ipynb  mcp_config_example.json  mcp_server.py  pyproject.toml  test_mcp_server.py  utils.py
persistance/: README.md  docker-compose.yml
persistance/neo4j/: neo4j_database.py
scripts/: setup.py
