[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-parallm-mcp"
version = "1.0.0"
description = "MCP server for MLX parallel language model generation"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "mlx>=0.0.1",
    "mlx-lm>=0.0.1"
]
requires-python = ">=3.11"

[project.scripts]
mlx-parallm-mcp = "mcp_server:app.run"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlx_parallm*"]